prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_04.zkc
//error:3:16-17:expected semicolon to define array size
fn main() {
  var items:[u8,2]
}